tests/single_instruction_translation_validation/mcsema/register-variants/vcvtss2si_r64_xmm/Output/test-lstate.out
/home/ubuntu/Install/llvm/llvm.4.0.0.install//bin/opt: test.mod.ll:174:24: error: use of undefined value '@my.nearbyint.f32'
  %8 = tail call float @my.nearbyint.f32(float %7) #22
                       ^
0.01user 0.01system 0:00.02elapsed 107%CPU (0avgtext+0avgdata 27524maxresident)k
0inputs+16outputs (0major+3264minor)pagefaults 0swaps
